# eiros-control-plane

./: .gitignore  CODEX_RESCUE_REPAIR_TASK.md  CORE.md  PROTOCOL.md  README.md  REVERSE_WAKE.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: claude-remote.example.json  instance.example.json
deploy/: __init__.py  bootstrap_ebridge_vps.sh  deploy.sh  eiros-claude.service  eiros-root-broker.service  eiros-tunnel.service  eiros-tunnel.service.example  eiros-worker.service  eiros.env.example  install.py  manifest.json  restore_vps_from_main.sh  tunnel-profile.example.yaml
docs/: ARCHITECTURE.md  EBRIDGE_BOOTSTRAP.md  EBRIDGE_CURRENT_STATE.md  EIROS_CURRENT_HANDOFF.json  EIROS_RECOVERY_RUNBOOK.md  OPERATIONS.md  SECURITY.md
root/: root_broker.py  root_client.py
runtime/: __init__.py  boot_report.py  bootstrap.py  claude_inbox.html  claude_pulse.html  claude_server.py  cli.py  collab.py  collab_room.html  config.py  control_pill.html  doctor.py  events.py  llm_bridge.py  maintenance.py  minute_probe.py  proof_scheduler_reverse.py  protocol.py  pulse_anchor.html  pulse_lite.html  pulse_static_test.html  pulse_widget.html  queue.py  reconnect.py  release_check.py  room_launcher.html  security.py  server_v2.py  snapshot.py  start_minute_probe.py  test_foundation.py  test_installer.py  test_queue.py  test_root_broker.py  test_scheduler.py  test_security.py  test_snapshot.py  test_watchdog.py  test_widget.py  validate_core.py  (+5 more)
