[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eiros-control-plane"
version = "0.2.0a1"
description = "Persistent event-driven control plane and reverse wake for ChatGPT MCP Apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp==1.28.0"]

[project.scripts]
eiros = "runtime.cli:main"

[tool.setuptools]
packages = ["runtime", "root"]

[tool.setuptools.package-data]
runtime = ["pulse_widget.html"]
